tests/rt/pos/core/record-nested.trp
{a = {x = 1, y = 2}, b = {z = 3}}.a.x