tests/rt/neg/core/listToTuple_neg4.trp
listToTuple {x = 1, y = 2}